--- a/src/search-page.html
+++ b/src/search-page.html
@@ -38,7 +38,7 @@
                 <h1><a href="./index.html">Cine Guide</a></h1>
               </li>
               <li>
-                <input id="search-input" type="text" placeholder="Busque por filme... "> <span id="search-icon"
+                <input id="search-input" type="text" placeholder="Ator,filme ou série"> <span id="search-icon"
                   class="material-symbols-outlined"> search </span>
               </li>
               <li>
@@ -65,7 +65,7 @@
           
           </header>
           <div id="wrapper-search">
-             <input id="input-search" type="text" placeholder="Busque por film..."> <span id="icon-search"
+             <input id="input-search" type="text" placeholder="Ator,filme ou série"> <span id="icon-search"
              class="material-symbols-outlined"> search </span>
           </div>
           <main>
