--- a/src/streamings.html
+++ b/src/streamings.html
@@ -40,7 +40,7 @@
       <h1><a href="./index.html">Cine Guide</a></h1>
     </li>
     <li>
-      <input id="search-input" type="text" placeholder="Busque por filme ..."> <span id="search-icon"
+      <input id="search-input" type="text" placeholder="Ator,filme ou série"> <span id="search-icon"
         class="material-symbols-outlined"> search </span>
     </li>
     <li>
